# todo_fastapi

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: session.py  tables.py
app/depends/: auth.py  db.py  repository.py  service.py
app/errors/: excpetion.py  handlers.py
app/todo/: api.py  models.py  repository.py  service.py
app/user/: api.py  models.py  repository.py  service.py
app/utils/: jwt.py
migrations/: env.py
migrations/versions/: 732e50cd86fd_first.py  fb29ad8ef64b_initial_revision1.py
